[tool.poetry]
name = "appwrite-function-proxy-template"
version = "0.2.0"
description = "Proxy to execute an Appwrite Function."
authors = ["Steven Nguyen"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
